@@ -27,24 +27,21 @@ import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.Vec3;
-import net.minecraftforge.registries.ForgeRegistries;
-import net.minecraftforge.registries.RegisterEvent;
-import net.minecraftforge.registries.RegistryObject;
+import net.neoforged.neoforge.registries.DeferredHolder;
+import net.neoforged.neoforge.registries.RegisterEvent;
 
-//@EventBusSubscriber(bus = Bus.FORGE)
 public class AllSoundEvents {
 
 	public static final Map<ResourceLocation, SoundEntry> ALL = new HashMap<>();
 
 	public static final SoundEntry
-
-	SCHEMATICANNON_LAUNCH_BLOCK = create("schematicannon_launch_block").subtitle("Schematicannon fires")
-		.playExisting(SoundEvents.GENERIC_EXPLODE, .1f, 1.1f)
-		.category(SoundSource.BLOCKS)
-		.build(),
+		SCHEMATICANNON_LAUNCH_BLOCK = create("schematicannon_launch_block").subtitle("Schematicannon fires")
+			.playExisting(SoundEvents.GENERIC_EXPLODE.value(), .1f, 1.1f)
+			.category(SoundSource.BLOCKS)
+			.build(),
 
 		SCHEMATICANNON_FINISH = create("schematicannon_finish").subtitle("Schematicannon dings")
-			.playExisting(SoundEvents.NOTE_BLOCK_BELL, 1, .7f)
+			.playExisting(SoundEvents.NOTE_BLOCK_BELL::value, 1, .7f)
 			.category(SoundSource.BLOCKS)
 			.build(),
 
@@ -112,12 +109,12 @@ public class AllSoundEvents {
 			.build(),
 
 		SCROLL_VALUE = create("scroll_value").subtitle("Scroll-input clicks")
-			.playExisting(SoundEvents.NOTE_BLOCK_HAT, .124f, 1f)
+			.playExisting(SoundEvents.NOTE_BLOCK_HAT::value, .124f, 1f)
 			.category(SoundSource.PLAYERS)
 			.build(),
 
 		CONFIRM = create("confirm").subtitle("Affirmative ding")
-			.playExisting(SoundEvents.NOTE_BLOCK_BELL, 0.5f, 0.8f)
+			.playExisting(SoundEvents.NOTE_BLOCK_BELL::value, 0.5f, 0.8f)
 			.category(SoundSource.PLAYERS)
 			.build(),
 
@@ -126,7 +123,7 @@ public class AllSoundEvents {
 			.build(),
 
 		DENY = create("deny").subtitle("Declining boop")
-			.playExisting(SoundEvents.NOTE_BLOCK_BASS, 1f, 0.5f)
+			.playExisting(SoundEvents.NOTE_BLOCK_BASS::value, 1f, 0.5f)
 			.category(SoundSource.PLAYERS)
 			.build(),
 
@@ -213,7 +210,7 @@ public class AllSoundEvents {
 			.build(),
 
 		COPPER_ARMOR_EQUIP = create("copper_armor_equip").subtitle("Diving equipment clinks")
-			.playExisting(SoundEvents.ARMOR_EQUIP_GOLD, 1f, 1f)
+			.playExisting(SoundEvents.ARMOR_EQUIP_GOLD.value(), 1f, 1f)
 			.category(SoundSource.PLAYERS)
 			.build(),
 
@@ -457,8 +454,7 @@ public class AllSoundEvents {
 
 	}
 
-	public record ConfiguredSoundEvent(Supplier<SoundEvent> event, float volume, float pitch) {
-	}
+	public record ConfiguredSoundEvent(Supplier<SoundEvent> event, float volume, float pitch) {}
 
 	public static class SoundEntryBuilder {
 
@@ -518,7 +514,7 @@ public class AllSoundEvents {
 		}
 
 		public SoundEntryBuilder playExisting(Holder<SoundEvent> event) {
-			return playExisting(event::get, 1, 1);
+			return playExisting(event::value, 1, 1);
 		}
 
 		public SoundEntry build() {
@@ -550,6 +546,8 @@ public class AllSoundEvents {
 		public abstract void register(RegisterEvent.RegisterHelper<SoundEvent> registry);
 
 		public abstract void write(JsonObject json);
+
+		public abstract Holder<SoundEvent> getMainEventHolder();
 
 		public abstract SoundEvent getMainEvent();
 
@@ -629,7 +627,7 @@ public class AllSoundEvents {
 			for (int i = 0; i < wrappedEvents.size(); i++) {
 				ConfiguredSoundEvent wrapped = wrappedEvents.get(i);
 				ResourceLocation location = getIdOf(i);
-				RegistryObject<SoundEvent> event = RegistryObject.create(location, ForgeRegistries.SOUND_EVENTS);
+				DeferredHolder<SoundEvent, SoundEvent> event = DeferredHolder.create(Registries.SOUND_EVENT, location);
 				compiledEvents.add(new CompiledSoundEvent(event, wrapped.volume(), wrapped.pitch()));
 			}
 		}
@@ -643,13 +641,17 @@ public class AllSoundEvents {
 		}
 
 		@Override
+		public Holder<SoundEvent> getMainEventHolder() {
+			return compiledEvents.getFirst().event();
+		}
+
+		@Override
 		public SoundEvent getMainEvent() {
-			return compiledEvents.get(0)
-				.event().get();
+			return compiledEvents.getFirst().event().get();
 		}
 
 		protected ResourceLocation getIdOf(int i) {
-			return new ResourceLocation(id.getNamespace(), i == 0 ? id.getPath() : id.getPath() + "_compounded_" + i);
+			return ResourceLocation.fromNamespaceAndPath(id.getNamespace(), i == 0 ? id.getPath() : id.getPath() + "_compounded_" + i);
 		}
 
 		@Override
@@ -690,7 +692,7 @@ public class AllSoundEvents {
 			}
 		}
 
-		private record CompiledSoundEvent(RegistryObject<SoundEvent> event, float volume, float pitch) {
+		private record CompiledSoundEvent(DeferredHolder<SoundEvent, SoundEvent> event, float volume, float pitch) {
 		}
 
 	}
@@ -698,7 +700,7 @@ public class AllSoundEvents {
 	private static class CustomSoundEntry extends SoundEntry {
 
 		protected List<ResourceLocation> variants;
-		protected RegistryObject<SoundEvent> event;
+		protected DeferredHolder<SoundEvent, SoundEvent> event;
 
 		public CustomSoundEntry(ResourceLocation id, List<ResourceLocation> variants, String subtitle,
 			SoundSource category, int attenuationDistance) {
@@ -708,13 +710,18 @@ public class AllSoundEvents {
 
 		@Override
 		public void prepare() {
-			event = RegistryObject.create(id, ForgeRegistries.SOUND_EVENTS);
+			event = DeferredHolder.create(Registries.SOUND_EVENT, id);
 		}
 
 		@Override
 		public void register(RegisterEvent.RegisterHelper<SoundEvent> helper) {
 			ResourceLocation location = event.getId();
 			helper.register(location, SoundEvent.createVariableRangeEvent(location));
+		}
+
+		@Override
+		public Holder<SoundEvent> getMainEventHolder() {
+			return event;
 		}
 
 		@Override
