@@ -2,19 +2,15 @@ package com.simibubi.create.compat.jei;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
-import javax.annotation.Nonnull;
 import javax.annotation.ParametersAreNonnullByDefault;
+
+import org.jetbrains.annotations.NotNull;
 
 import com.simibubi.create.AllBlocks;
 import com.simibubi.create.AllFluids;
@@ -24,6 +20,7 @@ import com.simibubi.create.Create;
 import com.simibubi.create.compat.jei.category.BlockCuttingCategory;
 import com.simibubi.create.compat.jei.category.BlockCuttingCategory.CondensedBlockCuttingRecipe;
 import com.simibubi.create.compat.jei.category.CreateRecipeCategory;
+import com.simibubi.create.compat.jei.category.CreateRecipeCategory.Factory;
 import com.simibubi.create.compat.jei.category.CrushingCategory;
 import com.simibubi.create.compat.jei.category.DeployingCategory;
 import com.simibubi.create.compat.jei.category.FanBlastingCategory;
@@ -62,6 +59,7 @@ import com.simibubi.create.content.kinetics.saw.CuttingRecipe;
 import com.simibubi.create.content.logistics.factoryBoard.FactoryPanelSetItemScreen;
 import com.simibubi.create.content.logistics.filter.AbstractFilterScreen;
 import com.simibubi.create.content.logistics.redstoneRequester.RedstoneRequesterScreen;
+import com.simibubi.create.content.logistics.stockTicker.StockKeeperRequestScreen;
 import com.simibubi.create.content.processing.basin.BasinRecipe;
 import com.simibubi.create.content.processing.sequenced.SequencedAssemblyRecipe;
 import com.simibubi.create.content.redstone.link.controller.LinkedControllerScreen;
@@ -69,17 +67,14 @@ import com.simibubi.create.content.trains.schedule.ScheduleScreen;
 import com.simibubi.create.foundation.data.recipe.LogStrippingFakeRecipes;
 import com.simibubi.create.foundation.gui.menu.AbstractSimiContainerScreen;
 import com.simibubi.create.foundation.item.ItemHelper;
-import com.simibubi.create.foundation.recipe.IRecipeTypeInfo;
-import com.simibubi.create.foundation.utility.CreateLang;
+import com.simibubi.create.foundation.utility.RecipeGenericsUtil;
 import com.simibubi.create.infrastructure.config.AllConfigs;
-import com.simibubi.create.infrastructure.config.CRecipes;
 
 import mezz.jei.api.IModPlugin;
 import mezz.jei.api.JeiPlugin;
 import mezz.jei.api.constants.RecipeTypes;
-import mezz.jei.api.forge.ForgeTypes;
-import mezz.jei.api.gui.drawable.IDrawable;
 import mezz.jei.api.helpers.IPlatformFluidHelper;
+import mezz.jei.api.neoforge.NeoForgeTypes;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import mezz.jei.api.registration.IExtraIngredientRegistration;
 import mezz.jei.api.registration.IGuiHandlerRegistration;
@@ -90,24 +85,28 @@ import mezz.jei.api.registration.IRecipeTransferRegistration;
 import mezz.jei.api.registration.ISubtypeRegistration;
 import mezz.jei.api.runtime.IIngredientManager;
 import mezz.jei.api.runtime.IJeiRuntime;
-import net.createmod.catnip.config.ConfigBase.ConfigBool;
 import net.minecraft.client.Minecraft;
+import net.minecraft.core.Holder;
+import net.minecraft.core.Holder.Reference;
 import net.minecraft.core.RegistryAccess;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.alchemy.Potion;
+import net.minecraft.world.item.alchemy.PotionContents;
 import net.minecraft.world.item.crafting.AbstractCookingRecipe;
 import net.minecraft.world.item.crafting.CraftingRecipe;
 import net.minecraft.world.item.crafting.Recipe;
+import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.RecipeInput;
 import net.minecraft.world.item.crafting.RecipeType;
+import net.minecraft.world.item.crafting.ShapedRecipe;
 import net.minecraft.world.item.crafting.SmokingRecipe;
-import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.block.Blocks;
-import net.minecraftforge.common.crafting.IShapedRecipe;
-import net.minecraftforge.fluids.FluidStack;
-import net.minecraftforge.registries.ForgeRegistries;
+
+import net.neoforged.neoforge.fluids.FluidStack;
 
 @JeiPlugin
 @SuppressWarnings("unused")
@@ -118,7 +117,7 @@ public class CreateJEI implements IModPlugin {
 
 	private final List<CreateRecipeCategory<?>> allCategories = new ArrayList<>();
 	private IIngredientManager ingredientManager;
-	
+
 	public static IJeiRuntime runtime;
 
 	private void loadCategories() {
@@ -126,14 +125,14 @@ public class CreateJEI implements IModPlugin {
 
 		CreateRecipeCategory<?>
 
-		milling = builder(AbstractCrushingRecipe.class)
-				.addTypedRecipes(AllRecipeTypes.MILLING)
-				.catalyst(AllBlocks.MILLSTONE::get)
-				.doubleItemIcon(AllBlocks.MILLSTONE.get(), AllItems.WHEAT_FLOUR.get())
-				.emptyBackground(177, 53)
-				.build("milling", MillingCategory::new),
+			milling = builder(AbstractCrushingRecipe.class)
+			.addTypedRecipes(AllRecipeTypes.MILLING)
+			.catalyst(AllBlocks.MILLSTONE::get)
+			.doubleItemIcon(AllBlocks.MILLSTONE.get(), AllItems.WHEAT_FLOUR.get())
+			.emptyBackground(177, 53)
+			.build("milling", MillingCategory::new),
 
-		crushing = builder(AbstractCrushingRecipe.class)
+			crushing = builder(AbstractCrushingRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.CRUSHING)
 				.addTypedRecipesExcluding(AllRecipeTypes.MILLING::getType, AllRecipeTypes.CRUSHING::getType)
 				.catalyst(AllBlocks.CRUSHING_WHEEL::get)
@@ -141,21 +140,21 @@ public class CreateJEI implements IModPlugin {
 				.emptyBackground(177, 100)
 				.build("crushing", CrushingCategory::new),
 
-		pressing = builder(PressingRecipe.class)
+			pressing = builder(PressingRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.PRESSING)
 				.catalyst(AllBlocks.MECHANICAL_PRESS::get)
 				.doubleItemIcon(AllBlocks.MECHANICAL_PRESS.get(), AllItems.IRON_SHEET.get())
 				.emptyBackground(177, 70)
 				.build("pressing", PressingCategory::new),
 
-		washing = builder(SplashingRecipe.class)
+			washing = builder(SplashingRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.SPLASHING)
 				.catalystStack(ProcessingViaFanCategory.getFan("fan_washing"))
 				.doubleItemIcon(AllItems.PROPELLER.get(), Items.WATER_BUCKET)
 				.emptyBackground(178, 72)
 				.build("fan_washing", FanWashingCategory::new),
 
-		smoking = builder(SmokingRecipe.class)
+			smoking = builder(SmokingRecipe.class)
 				.addTypedRecipes(() -> RecipeType.SMOKING)
 				.removeNonAutomation()
 				.catalystStack(ProcessingViaFanCategory.getFan("fan_smoking"))
@@ -163,7 +162,7 @@ public class CreateJEI implements IModPlugin {
 				.emptyBackground(178, 72)
 				.build("fan_smoking", FanSmokingCategory::new),
 
-		blasting = builder(AbstractCookingRecipe.class)
+			blasting = builder(AbstractCookingRecipe.class)
 				.addTypedRecipesExcluding(() -> RecipeType.SMELTING, () -> RecipeType.BLASTING)
 				.addTypedRecipes(() -> RecipeType.BLASTING)
 				.removeRecipes(() -> RecipeType.SMOKING)
@@ -173,14 +172,14 @@ public class CreateJEI implements IModPlugin {
 				.emptyBackground(178, 72)
 				.build("fan_blasting", FanBlastingCategory::new),
 
-		haunting = builder(HauntingRecipe.class)
+			haunting = builder(HauntingRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.HAUNTING)
 				.catalystStack(ProcessingViaFanCategory.getFan("fan_haunting"))
 				.doubleItemIcon(AllItems.PROPELLER.get(), Items.SOUL_CAMPFIRE)
 				.emptyBackground(178, 72)
 				.build("fan_haunting", FanHauntingCategory::new),
 
-		mixing = builder(BasinRecipe.class)
+			mixing = builder(BasinRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.MIXING)
 				.catalyst(AllBlocks.MECHANICAL_MIXER::get)
 				.catalyst(AllBlocks.BASIN::get)
@@ -188,29 +187,29 @@ public class CreateJEI implements IModPlugin {
 				.emptyBackground(177, 103)
 				.build("mixing", MixingCategory::standard),
 
-		autoShapeless = builder(BasinRecipe.class)
-				.enableWhen(c -> c.allowShapelessInMixer)
-				.addAllRecipesIf(r -> r instanceof CraftingRecipe && !(r instanceof IShapedRecipe<?>)
-								&& r.getIngredients()
-								.size() > 1
-								&& !MechanicalPressBlockEntity.canCompress(r) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
-						BasinRecipe::convertShapeless)
+			autoShapeless = builder(BasinRecipe.class)
+				.enableWhen(AllConfigs.server().recipes.allowShapelessInMixer)
+				.addAllRecipesIf(r -> r.value() instanceof CraftingRecipe && !(r.value() instanceof ShapedRecipe)
+						&& r.value().getIngredients()
+						.size() > 1
+						&& !MechanicalPressBlockEntity.canCompress(r.value()) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
+					BasinRecipe::convertShapeless)
 				.catalyst(AllBlocks.MECHANICAL_MIXER::get)
 				.catalyst(AllBlocks.BASIN::get)
 				.doubleItemIcon(AllBlocks.MECHANICAL_MIXER.get(), Items.CRAFTING_TABLE)
 				.emptyBackground(177, 85)
 				.build("automatic_shapeless", MixingCategory::autoShapeless),
 
-		brewing = builder(BasinRecipe.class)
-				.enableWhen(c -> c.allowBrewingInMixer)
-				.addRecipes(() -> PotionMixingRecipes.ALL)
+			brewing = builder(BasinRecipe.class)
+				.enableWhen(AllConfigs.server().recipes.allowBrewingInMixer)
+				.addRecipes(() -> RecipeGenericsUtil.cast(PotionMixingRecipes.createRecipes(Minecraft.getInstance().level)))
 				.catalyst(AllBlocks.MECHANICAL_MIXER::get)
 				.catalyst(AllBlocks.BASIN::get)
 				.doubleItemIcon(AllBlocks.MECHANICAL_MIXER.get(), Blocks.BREWING_STAND)
 				.emptyBackground(177, 103)
 				.build("automatic_brewing", MixingCategory::autoBrewing),
 
-		packing = builder(BasinRecipe.class)
+			packing = builder(BasinRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.COMPACTING)
 				.catalyst(AllBlocks.MECHANICAL_PRESS::get)
 				.catalyst(AllBlocks.BASIN::get)
@@ -218,34 +217,34 @@ public class CreateJEI implements IModPlugin {
 				.emptyBackground(177, 103)
 				.build("packing", PackingCategory::standard),
 
-		autoSquare = builder(BasinRecipe.class)
-				.enableWhen(c -> c.allowShapedSquareInPress)
+			autoSquare = builder(BasinRecipe.class)
+				.enableWhen(AllConfigs.server().recipes.allowShapedSquareInPress)
 				.addAllRecipesIf(
-						r -> (r instanceof CraftingRecipe) && !(r instanceof MechanicalCraftingRecipe)
-								&& MechanicalPressBlockEntity.canCompress(r) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
-						BasinRecipe::convertShapeless)
+					r -> (r.value() instanceof CraftingRecipe) && !(r.value() instanceof MechanicalCraftingRecipe)
+						&& MechanicalPressBlockEntity.canCompress(r.value()) && !AllRecipeTypes.shouldIgnoreInAutomation(r),
+					BasinRecipe::convertShapeless)
 				.catalyst(AllBlocks.MECHANICAL_PRESS::get)
 				.catalyst(AllBlocks.BASIN::get)
 				.doubleItemIcon(AllBlocks.MECHANICAL_PRESS.get(), Blocks.CRAFTING_TABLE)
 				.emptyBackground(177, 85)
 				.build("automatic_packing", PackingCategory::autoSquare),
 
-		sawing = builder(CuttingRecipe.class)
+			sawing = builder(CuttingRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.CUTTING)
 				.catalyst(AllBlocks.MECHANICAL_SAW::get)
 				.doubleItemIcon(AllBlocks.MECHANICAL_SAW.get(), Items.OAK_LOG)
 				.emptyBackground(177, 70)
 				.build("sawing", SawingCategory::new),
 
-		blockCutting = builder(CondensedBlockCuttingRecipe.class)
-				.enableWhen(c -> c.allowStonecuttingOnSaw)
+			blockCutting = builder(CondensedBlockCuttingRecipe.class)
+				.enableWhen(AllConfigs.server().recipes.allowStonecuttingOnSaw)
 				.addRecipes(() -> BlockCuttingCategory.condenseRecipes(getTypedRecipesExcluding(RecipeType.STONECUTTING, AllRecipeTypes::shouldIgnoreInAutomation)))
 				.catalyst(AllBlocks.MECHANICAL_SAW::get)
 				.doubleItemIcon(AllBlocks.MECHANICAL_SAW.get(), Items.STONE_BRICK_STAIRS)
 				.emptyBackground(177, 70)
 				.build("block_cutting", BlockCuttingCategory::new),
 
-		polishing = builder(SandPaperPolishingRecipe.class)
+			polishing = builder(SandPaperPolishingRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.SANDPAPER_POLISHING)
 				.catalyst(AllItems.SAND_PAPER::get)
 				.catalyst(AllItems.RED_SAND_PAPER::get)
@@ -253,14 +252,14 @@ public class CreateJEI implements IModPlugin {
 				.emptyBackground(177, 55)
 				.build("sandpaper_polishing", PolishingCategory::new),
 
-		item_application = builder(ItemApplicationRecipe.class)
+			item_application = builder(ItemApplicationRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.ITEM_APPLICATION)
-				.addRecipes(LogStrippingFakeRecipes::createRecipes)
+				.addRecipes(() -> RecipeGenericsUtil.cast(LogStrippingFakeRecipes.createRecipes()))
 				.itemIcon(AllItems.BRASS_HAND.get())
 				.emptyBackground(177, 60)
 				.build("item_application", ItemApplicationCategory::new),
 
-		deploying = builder(DeployerApplicationRecipe.class)
+			deploying = builder(DeployerApplicationRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.DEPLOYING)
 				.addTypedRecipes(AllRecipeTypes.SANDPAPER_POLISHING::getType, DeployerApplicationRecipe::convert)
 				.addTypedRecipes(AllRecipeTypes.ITEM_APPLICATION::getType, ManualApplicationRecipe::asDeploying)
@@ -272,7 +271,7 @@ public class CreateJEI implements IModPlugin {
 				.emptyBackground(177, 70)
 				.build("deploying", DeployingCategory::new),
 
-		spoutFilling = builder(FillingRecipe.class)
+			spoutFilling = builder(FillingRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.FILLING)
 				.addRecipeListConsumer(recipes -> SpoutCategory.consumeRecipes(recipes::add, ingredientManager))
 				.catalyst(AllBlocks.SPOUT::get)
@@ -280,7 +279,7 @@ public class CreateJEI implements IModPlugin {
 				.emptyBackground(177, 70)
 				.build("spout_filling", SpoutCategory::new),
 
-		draining = builder(EmptyingRecipe.class)
+			draining = builder(EmptyingRecipe.class)
 				.addRecipeListConsumer(recipes -> ItemDrainCategory.consumeRecipes(recipes::add, ingredientManager))
 				.addTypedRecipes(AllRecipeTypes.EMPTYING)
 				.catalyst(AllBlocks.ITEM_DRAIN::get)
@@ -288,33 +287,33 @@ public class CreateJEI implements IModPlugin {
 				.emptyBackground(177, 50)
 				.build("draining", ItemDrainCategory::new),
 
-		autoShaped = builder(CraftingRecipe.class)
-				.enableWhen(c -> c.allowRegularCraftingInCrafter)
-				.addAllRecipesIf(r -> r instanceof CraftingRecipe && !(r instanceof IShapedRecipe<?>)
-						&& r.getIngredients()
-						.size() == 1
-						&& !AllRecipeTypes.shouldIgnoreInAutomation(r))
+			autoShaped = builder(CraftingRecipe.class)
+				.enableWhen(AllConfigs.server().recipes.allowRegularCraftingInCrafter)
+				.addAllRecipesIf(r -> r.value() instanceof CraftingRecipe && !(r.value() instanceof ShapedRecipe)
+					&& r.value().getIngredients()
+					.size() == 1
+					&& !AllRecipeTypes.shouldIgnoreInAutomation(r))
 				.addTypedRecipesIf(() -> RecipeType.CRAFTING,
-						recipe -> recipe instanceof IShapedRecipe<?> && !AllRecipeTypes.shouldIgnoreInAutomation(recipe))
+					recipe -> recipe.value() instanceof ShapedRecipe && !AllRecipeTypes.shouldIgnoreInAutomation(recipe))
 				.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
 				.itemIcon(AllBlocks.MECHANICAL_CRAFTER.get())
 				.emptyBackground(177, 107)
 				.build("automatic_shaped", MechanicalCraftingCategory::new),
 
-		mechanicalCrafting = builder(CraftingRecipe.class)
+			mechanicalCrafting = builder(CraftingRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.MECHANICAL_CRAFTING)
 				.catalyst(AllBlocks.MECHANICAL_CRAFTER::get)
 				.itemIcon(AllBlocks.MECHANICAL_CRAFTER.get())
 				.emptyBackground(177, 107)
 				.build("mechanical_crafting", MechanicalCraftingCategory::new),
 
-		seqAssembly = builder(SequencedAssemblyRecipe.class)
+			seqAssembly = builder(SequencedAssemblyRecipe.class)
 				.addTypedRecipes(AllRecipeTypes.SEQUENCED_ASSEMBLY)
 				.itemIcon(AllItems.PRECISION_MECHANISM.get())
 				.emptyBackground(180, 115)
 				.build("sequenced_assembly", SequencedAssemblyCategory::new),
 
-		mysteryConversion = builder(ConversionRecipe.class)
+			mysteryConversion = builder(ConversionRecipe.class)
 				.addRecipes(() -> MysteriousItemConversionCategory.RECIPES)
 				.itemIcon(AllBlocks.PECULIAR_BELL.get())
 				.emptyBackground(177, 50)
@@ -322,12 +321,12 @@ public class CreateJEI implements IModPlugin {
 
 	}
 
-	private <T extends Recipe<?>> CategoryBuilder<T> builder(Class<? extends T> recipeClass) {
+	private <T extends Recipe<? extends RecipeInput>> CategoryBuilder<T> builder(Class<T> recipeClass) {
 		return new CategoryBuilder<>(recipeClass);
 	}
 
 	@Override
-	@Nonnull
+	@NotNull
 	public ResourceLocation getPluginUid() {
 		return ID;
 	}
@@ -362,35 +361,43 @@ public class CreateJEI implements IModPlugin {
 	public <T> void registerFluidSubtypes(ISubtypeRegistration registration, IPlatformFluidHelper<T> platformFluidHelper) {
 		PotionFluidSubtypeInterpreter interpreter = new PotionFluidSubtypeInterpreter();
 		PotionFluid potionFluid = AllFluids.POTION.get();
-		registration.registerSubtypeInterpreter(ForgeTypes.FLUID_STACK, potionFluid.getSource(), interpreter);
-		registration.registerSubtypeInterpreter(ForgeTypes.FLUID_STACK, potionFluid.getFlowing(), interpreter);
+		registration.registerSubtypeInterpreter(NeoForgeTypes.FLUID_STACK, potionFluid.getSource(), interpreter);
+		registration.registerSubtypeInterpreter(NeoForgeTypes.FLUID_STACK, potionFluid.getFlowing(), interpreter);
 	}
 
 	@Override
 	public void registerExtraIngredients(IExtraIngredientRegistration registration) {
-		Collection<Potion> potions = ForgeRegistries.POTIONS.getValues();
+		RegistryAccess registryAccess = Minecraft.getInstance().level.registryAccess();
+		List<Reference<Potion>> potions = registryAccess.lookupOrThrow(Registries.POTION)
+			.listElements()
+			.toList();
 		Collection<FluidStack> potionFluids = new ArrayList<>(potions.size() * 3);
-		Set<Set<MobEffect>> visitedEffects = new HashSet<>();
-		for (Potion potion : potions) {
+		Set<Set<Holder<MobEffect>>> visitedEffects = new HashSet<>();
+		for (Reference<Potion> potion : potions) {
 			// @goshante: Ingame potion fluids always have Bottle tag that specifies
 			// to what bottle type this potion belongs
 			// Potion fluid without this tag wouldn't be recognized by other mods
-			
+
 //			for (PotionFluid.BottleType bottleType : PotionFluid.BottleType.values()) {
-//				FluidStack potionFluid = PotionFluid.of(1000, potion, bottleType);
+//				FluidStack potionFluid = PotionFluid.of(1000, new PotionContents(potion), bottleType);
 //				potionFluids.add(potionFluid);
 //			}
-			
-			if (!potion.getEffects().isEmpty())
-				if (!visitedEffects.add(potion.getEffects().stream().map(mei -> mei.getEffect()).collect(Collectors.toSet())))
+
+			PotionContents potionContents = new PotionContents(potion);
+
+			if (potionContents.hasEffects()) {
+				Set<Holder<MobEffect>> effectSet = new HashSet<>();
+				potionContents.forEachEffect(mei -> effectSet.add(mei.getEffect()));
+				if (!visitedEffects.add(effectSet))
 					continue;
-			
-			potionFluids.add(PotionFluid.of(1000, potion, PotionFluid.BottleType.REGULAR));
+}
+
+			potionFluids.add(PotionFluid.of(1000, potionContents, PotionFluid.BottleType.REGULAR));
 		}
-		registration.addExtraIngredients(ForgeTypes.FLUID_STACK, potionFluids);
+		registration.addExtraIngredients(NeoForgeTypes.FLUID_STACK, potionFluids);
 	}
 
-	@SuppressWarnings({ "unchecked", "rawtypes" })
+	@SuppressWarnings({"unchecked", "rawtypes"})
 	@Override
 	public void registerGuiHandlers(IGuiHandlerRegistration registration) {
 		registration.addGenericGuiContainerHandler(AbstractSimiContainerScreen.class, new SlotMover());
@@ -401,166 +408,24 @@ public class CreateJEI implements IModPlugin {
 		registration.addGhostIngredientHandler(ScheduleScreen.class, new GhostIngredientHandler());
 		registration.addGhostIngredientHandler(RedstoneRequesterScreen.class, new GhostIngredientHandler());
 		registration.addGhostIngredientHandler(FactoryPanelSetItemScreen.class, new GhostIngredientHandler());
+
+		registration.addGuiContainerHandler(StockKeeperRequestScreen.class, new StockKeeperGuiContainerHandler(ingredientManager));
 	}
 
-	private class CategoryBuilder<T extends Recipe<?>> {
-		private final Class<? extends T> recipeClass;
-		private Predicate<CRecipes> predicate = cRecipes -> true;
-
-		private IDrawable background;
-		private IDrawable icon;
-
-		private final List<Consumer<List<T>>> recipeListConsumers = new ArrayList<>();
-		private final List<Supplier<? extends ItemStack>> catalysts = new ArrayList<>();
-
+	private class CategoryBuilder<T extends Recipe<?>> extends CreateRecipeCategory.Builder<T> {
 		public CategoryBuilder(Class<? extends T> recipeClass) {
-			this.recipeClass = recipeClass;
+			super(recipeClass);
 		}
 
-		public CategoryBuilder<T> enableIf(Predicate<CRecipes> predicate) {
-			this.predicate = predicate;
-			return this;
-		}
-
-		public CategoryBuilder<T> enableWhen(Function<CRecipes, ConfigBool> configValue) {
-			predicate = c -> configValue.apply(c).get();
-			return this;
-		}
-
-		public CategoryBuilder<T> addRecipeListConsumer(Consumer<List<T>> consumer) {
-			recipeListConsumers.add(consumer);
-			return this;
-		}
-
-		public CategoryBuilder<T> addRecipes(Supplier<Collection<? extends T>> collection) {
-			return addRecipeListConsumer(recipes -> recipes.addAll(collection.get()));
-		}
-
-		@SuppressWarnings("unchecked")
-		public CategoryBuilder<T> addAllRecipesIf(Predicate<Recipe<?>> pred) {
-			return addRecipeListConsumer(recipes -> consumeAllRecipes(recipe -> {
-				if (pred.test(recipe))
-					recipes.add((T) recipe);
-			}));
-		}
-
-		public CategoryBuilder<T> addAllRecipesIf(Predicate<Recipe<?>> pred, Function<Recipe<?>, T> converter) {
-			return addRecipeListConsumer(recipes -> consumeAllRecipes(recipe -> {
-				if (pred.test(recipe)) {
-					recipes.add(converter.apply(recipe));
-				}
-			}));
-		}
-
-		public CategoryBuilder<T> addTypedRecipes(IRecipeTypeInfo recipeTypeEntry) {
-			return addTypedRecipes(recipeTypeEntry::getType);
-		}
-
-		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType) {
-			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipes::add, recipeType.get()));
-		}
-
-		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType, Function<Recipe<?>, T> converter) {
-			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipe -> recipes.add(converter.apply(recipe)), recipeType.get()));
-		}
-
-		public CategoryBuilder<T> addTypedRecipesIf(Supplier<RecipeType<? extends T>> recipeType, Predicate<Recipe<?>> pred) {
-			return addRecipeListConsumer(recipes -> CreateJEI.<T>consumeTypedRecipes(recipe -> {
-				if (pred.test(recipe)) {
-					recipes.add(recipe);
-				}
-			}, recipeType.get()));
-		}
-
-		public CategoryBuilder<T> addTypedRecipesExcluding(Supplier<RecipeType<? extends T>> recipeType,
-			Supplier<RecipeType<? extends T>> excluded) {
-			return addRecipeListConsumer(recipes -> {
-				List<Recipe<?>> excludedRecipes = getTypedRecipes(excluded.get());
-				CreateJEI.<T>consumeTypedRecipes(recipe -> {
-					for (Recipe<?> excludedRecipe : excludedRecipes) {
-						if (doInputsMatch(recipe, excludedRecipe)) {
-							return;
-						}
-					}
-					recipes.add(recipe);
-				}, recipeType.get());
-			});
-		}
-
-		public CategoryBuilder<T> removeRecipes(Supplier<RecipeType<? extends T>> recipeType) {
-			return addRecipeListConsumer(recipes -> {
-				List<Recipe<?>> excludedRecipes = getTypedRecipes(recipeType.get());
-				recipes.removeIf(recipe -> {
-					for (Recipe<?> excludedRecipe : excludedRecipes)
-						if (doInputsMatch(recipe, excludedRecipe) && doOutputsMatch(recipe, excludedRecipe))
-							return true;
-					return false;
-				});
-			});
-		}
-
-		public CategoryBuilder<T> removeNonAutomation() {
-			return addRecipeListConsumer(recipes -> recipes.removeIf(AllRecipeTypes.CAN_BE_AUTOMATED.negate()));
-		}
-
-		public CategoryBuilder<T> catalystStack(Supplier<ItemStack> supplier) {
-			catalysts.add(supplier);
-			return this;
-		}
-
-		public CategoryBuilder<T> catalyst(Supplier<ItemLike> supplier) {
-			return catalystStack(() -> new ItemStack(supplier.get()
-				.asItem()));
-		}
-
-		public CategoryBuilder<T> icon(IDrawable icon) {
-			this.icon = icon;
-			return this;
-		}
-
-		public CategoryBuilder<T> itemIcon(ItemLike item) {
-			icon(new ItemIcon(() -> new ItemStack(item)));
-			return this;
-		}
-
-		public CategoryBuilder<T> doubleItemIcon(ItemLike item1, ItemLike item2) {
-			icon(new DoubleItemIcon(() -> new ItemStack(item1), () -> new ItemStack(item2)));
-			return this;
-		}
-
-		public CategoryBuilder<T> background(IDrawable background) {
-			this.background = background;
-			return this;
-		}
-
-		public CategoryBuilder<T> emptyBackground(int width, int height) {
-			background(new EmptyBackground(width, height));
-			return this;
-		}
-
-		public CreateRecipeCategory<T> build(String name, CreateRecipeCategory.Factory<T> factory) {
-			Supplier<List<T>> recipesSupplier;
-			if (predicate.test(AllConfigs.server().recipes)) {
-				recipesSupplier = () -> {
-					List<T> recipes = new ArrayList<>();
-					for (Consumer<List<T>> consumer : recipeListConsumers)
-						consumer.accept(recipes);
-					return recipes;
-				};
-			} else {
-				recipesSupplier = () -> Collections.emptyList();
-			}
-
-			CreateRecipeCategory.Info<T> info = new CreateRecipeCategory.Info<>(
-					new mezz.jei.api.recipe.RecipeType<>(Create.asResource(name), recipeClass),
-					CreateLang.translateDirect("recipe." + name), background, icon, recipesSupplier, catalysts);
-			CreateRecipeCategory<T> category = factory.create(info);
+		@Override
+		public CreateRecipeCategory<T> build(ResourceLocation id, Factory<T> factory) {
+			CreateRecipeCategory<T> category = super.build(id, factory);
 			allCategories.add(category);
 			return category;
 		}
 	}
 
-	public static void consumeAllRecipes(Consumer<Recipe<?>> consumer) {
+	public static void consumeAllRecipes(Consumer<? super RecipeHolder<?>> consumer) {
 		Minecraft.getInstance()
 			.getConnection()
 			.getRecipeManager()
@@ -568,23 +433,23 @@ public class CreateJEI implements IModPlugin {
 			.forEach(consumer);
 	}
 
-	@SuppressWarnings("unchecked")
-	public static <T extends Recipe<?>> void consumeTypedRecipes(Consumer<T> consumer, RecipeType<?> type) {
-		Map<ResourceLocation, Recipe<?>> map = Minecraft.getInstance()
+	@SuppressWarnings({"unchecked", "rawtypes"})
+	public static <T extends Recipe<?>> void consumeTypedRecipes(Consumer<RecipeHolder<?>> consumer, RecipeType<?> type) {
+		List<? extends RecipeHolder<?>> map = Minecraft.getInstance()
 			.getConnection()
-			.getRecipeManager().recipes.get(type);
-		if (map != null)
-			map.values().forEach(recipe -> consumer.accept((T) recipe));
+			.getRecipeManager().getAllRecipesFor((RecipeType) type);
+		if (!map.isEmpty())
+			map.forEach(consumer);
 	}
 
-	public static List<Recipe<?>> getTypedRecipes(RecipeType<?> type) {
-		List<Recipe<?>> recipes = new ArrayList<>();
+	public static List<RecipeHolder<?>> getTypedRecipes(RecipeType<?> type) {
+		List<RecipeHolder<?>> recipes = new ArrayList<>();
 		consumeTypedRecipes(recipes::add, type);
 		return recipes;
 	}
 
-	public static List<Recipe<?>> getTypedRecipesExcluding(RecipeType<?> type, Predicate<Recipe<?>> exclusionPred) {
-		List<Recipe<?>> recipes = getTypedRecipes(type);
+	public static List<RecipeHolder<?>> getTypedRecipesExcluding(RecipeType<?> type, Predicate<RecipeHolder<?>> exclusionPred) {
+		List<RecipeHolder<?>> recipes = getTypedRecipes(type);
 		recipes.removeIf(exclusionPred);
 		return recipes;
 	}
@@ -593,28 +458,28 @@ public class CreateJEI implements IModPlugin {
 		if (recipe1.getIngredients()
 			.isEmpty()
 			|| recipe2.getIngredients()
-				.isEmpty()) {
+			.isEmpty()) {
 			return false;
 		}
 		ItemStack[] matchingStacks = recipe1.getIngredients()
-			.get(0)
+			.getFirst()
 			.getItems();
 		if (matchingStacks.length == 0) {
 			return false;
 		}
 		return recipe2.getIngredients()
-				.get(0)
-				.test(matchingStacks[0]);
+			.getFirst()
+			.test(matchingStacks[0]);
 	}
 
 	public static boolean doOutputsMatch(Recipe<?> recipe1, Recipe<?> recipe2) {
 		RegistryAccess registryAccess = Minecraft.getInstance().level.registryAccess();
 		return ItemHelper.sameItem(recipe1.getResultItem(registryAccess), recipe2.getResultItem(registryAccess));
 	}
-	
+
 	@Override
-    public void onRuntimeAvailable(IJeiRuntime runtime) {
-        CreateJEI.runtime = runtime;
-    }
+	public void onRuntimeAvailable(IJeiRuntime runtime) {
+		CreateJEI.runtime = runtime;
+	}
 
 }
