@@ -4,15 +4,20 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Function;
 
+import com.simibubi.create.AllDataComponents;
 import com.simibubi.create.AllEnchantments;
 import com.simibubi.create.AllSoundEvents;
 import com.simibubi.create.AllTags;
 import com.simibubi.create.foundation.utility.CreateLang;
+import com.simibubi.create.foundation.utility.DistExecutor;
 import com.simibubi.create.infrastructure.config.AllConfigs;
 
+import net.neoforged.api.distmarker.Dist;
+
+import it.unimi.dsi.fastutil.objects.Object2IntMap.Entry;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
-import net.minecraft.nbt.CompoundTag;
+import net.minecraft.core.Holder;
 import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
@@ -24,9 +29,8 @@ import net.minecraft.util.Mth;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
-
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.fml.DistExecutor;
+import net.minecraft.world.item.enchantment.Enchantment;
+import net.minecraft.world.item.enchantment.ItemEnchantments;
 
 public class BacktankUtil {
 
@@ -64,18 +68,15 @@ public class BacktankUtil {
 		return getAir(backtank) > 0;
 	}
 
-	public static float getAir(ItemStack backtank) {
-		CompoundTag tag = backtank.getOrCreateTag();
-		return Math.min(tag.getFloat("Air"), maxAir(backtank));
+	public static int getAir(ItemStack backtank) {
+		return Math.min(backtank.getOrDefault(AllDataComponents.BACKTANK_AIR, 0), maxAir(backtank));
 	}
 
-	public static void consumeAir(LivingEntity entity, ItemStack backtank, float i) {
-		CompoundTag tag = backtank.getOrCreateTag();
+	public static void consumeAir(LivingEntity entity, ItemStack backtank, int i) {
 		int maxAir = maxAir(backtank);
-		float air = getAir(backtank);
-		float newAir = Math.max(air - i, 0);
-		tag.putFloat("Air", Math.min(newAir, maxAir));
-		backtank.setTag(tag);
+		int air = getAir(backtank);
+		int newAir = Math.max(air - i, 0);
+		backtank.set(AllDataComponents.BACKTANK_AIR, Math.min(newAir, maxAir));
 
 		if (!(entity instanceof ServerPlayer player))
 			return;
@@ -104,7 +105,15 @@ public class BacktankUtil {
 	}
 
 	public static int maxAir(ItemStack backtank) {
-		return maxAir(backtank.getEnchantmentLevel(AllEnchantments.CAPACITY.get()));
+		int enchantLevel = 0;
+		ItemEnchantments enchants = backtank.getTagEnchantments();
+		for (Entry<Holder<Enchantment>> entry : enchants.entrySet()) {
+			if (entry.getKey().is(AllEnchantments.CAPACITY)) {
+				enchantLevel = entry.getIntValue();
+				break;
+			}
+		}
+		return maxAir(enchantLevel);
 	}
 
 	public static int maxAir(int enchantLevel) {
@@ -124,8 +133,8 @@ public class BacktankUtil {
 		List<ItemStack> backtanks = getAllWithAir(entity);
 		if (backtanks.isEmpty())
 			return false;
-		float cost = ((float) maxAirWithoutEnchants()) / usesPerTank;
-		consumeAir(entity, backtanks.get(0), cost);
+		int cost = Math.max(maxAirWithoutEnchants() / usesPerTank, 1);
+		consumeAir(entity, backtanks.getFirst(), cost);
 		return true;
 	}
 
@@ -156,9 +165,9 @@ public class BacktankUtil {
 			return Math.round(13.0F - (float) stack.getDamageValue() / stack.getMaxDamage() * 13.0F);
 
 		if (backtanks.size() == 1)
-			return backtanks.get(0)
+			return backtanks.getFirst()
 				.getItem()
-				.getBarWidth(backtanks.get(0));
+				.getBarWidth(backtanks.getFirst());
 
 		// If there is more than one backtank, average the bar widths.
 		int sumBarWidth = backtanks.stream()
