@@ -7,22 +7,25 @@ import com.simibubi.create.AllItems;
 
 import net.createmod.catnip.gui.element.GuiGameElement;
 import net.createmod.catnip.theme.Color;
+import net.minecraft.client.DeltaTracker;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.gui.LayeredDraw;
 import net.minecraft.client.player.LocalPlayer;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.component.DataComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.util.StringUtil;
+import net.minecraft.world.effect.MobEffectUtil;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.GameType;
+import net.minecraft.world.level.block.Blocks;
 
-import net.minecraftforge.client.gui.overlay.ForgeGui;
-import net.minecraftforge.client.gui.overlay.IGuiOverlay;
-
-public class RemainingAirOverlay implements IGuiOverlay {
+public class RemainingAirOverlay implements LayeredDraw.Layer {
 	public static final RemainingAirOverlay INSTANCE = new RemainingAirOverlay();
 
 	@Override
-	public void render(ForgeGui gui, GuiGraphics graphics, float partialTick, int width, int height) {
+	public void render(GuiGraphics guiGraphics, DeltaTracker deltaTracker) {
 		Minecraft mc = Minecraft.getInstance();
 		if (mc.options.hideGui || mc.gameMode.getPlayerMode() == GameType.SPECTATOR)
 			return;
@@ -35,28 +38,30 @@ public class RemainingAirOverlay implements IGuiOverlay {
 		if (!player.getPersistentData()
 			.contains("VisualBacktankAir"))
 			return;
-		if (!player.canDrownInFluidType(player.getEyeInFluidType()) && !player.isInLava())
+		boolean isAir = player.getEyeInFluidType().isAir() || player.level().getBlockState(BlockPos.containing(player.getX(), player.getEyeY(), player.getZ())).is(Blocks.BUBBLE_COLUMN);
+		boolean canBreathe = !player.canDrownInFluidType(player.getEyeInFluidType()) || MobEffectUtil.hasWaterBreathing(player) || player.getAbilities().invulnerable;
+		if ((isAir || canBreathe) && !player.isInLava())
 			return;
 
 		int timeLeft = player.getPersistentData()
 			.getInt("VisualBacktankAir");
 
-		PoseStack poseStack = graphics.pose();
+		PoseStack poseStack = guiGraphics.pose();
 		poseStack.pushPose();
 
 		ItemStack backtank = getDisplayedBacktank(player);
-		poseStack.translate(width / 2 + 90, height - 53 + (backtank.getItem()
-			.isFireResistant() ? 9 : 0), 0);
+		poseStack.translate(guiGraphics.guiWidth() / 2 + 90, guiGraphics.guiHeight() - 53 + (backtank
+				.has(DataComponents.FIRE_RESISTANT) ? 9 : 0), 0);
 
-		Component text = Component.literal(StringUtil.formatTickDuration(Math.max(0, timeLeft - 1) * 20));
+		Component text = Component.literal(StringUtil.formatTickDuration(Math.max(0, timeLeft - 1) * 20, mc.level.tickRateManager().tickrate()));
 		GuiGameElement.of(backtank)
 			.at(0, 0)
-			.render(graphics);
+			.render(guiGraphics);
 		int color = 0xFF_FFFFFF;
 		if (timeLeft < 60 && timeLeft % 2 == 0) {
 			color = Color.mixColors(0xFF_FF0000, color, Math.max(timeLeft / 60f, .25f));
 		}
-		graphics.drawString(mc.font, text, 16, 5, color);
+		guiGraphics.drawString(mc.font, text, 16, 5, color);
 
 		poseStack.popPose();
 	}
@@ -64,7 +69,7 @@ public class RemainingAirOverlay implements IGuiOverlay {
 	public static ItemStack getDisplayedBacktank(LocalPlayer player) {
 		List<ItemStack> backtanks = BacktankUtil.getAllWithAir(player);
 		if (!backtanks.isEmpty()) {
-			return backtanks.get(0);
+			return backtanks.getFirst();
 		}
 		return AllItems.COPPER_BACKTANK.asStack();
 	}
