@@ -1,17 +1,17 @@
 package com.simibubi.create.content.kinetics.deployer;
 
-import static net.minecraftforge.eventbus.api.Event.Result.DEFAULT;
-import static net.minecraftforge.eventbus.api.Event.Result.DENY;
-
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
-import javax.annotation.Nullable;
+import org.jetbrains.annotations.Nullable;
 
 import org.apache.commons.lang3.tuple.Pair;
 
-import com.google.common.collect.Multimap;
+import com.google.common.collect.HashMultimap;
+import com.simibubi.create.AllDataComponents;
 import com.simibubi.create.AllSoundEvents;
 import com.simibubi.create.AllTags.AllItemTags;
 import com.simibubi.create.content.contraptions.AbstractContraptionEntity;
@@ -26,17 +26,17 @@ import com.simibubi.create.foundation.utility.BlockHelper;
 import net.createmod.catnip.levelWrappers.WrappedLevel;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
-import net.minecraft.nbt.CompoundTag;
+import net.minecraft.core.Holder;
+import net.minecraft.core.component.DataComponents;
+import net.minecraft.network.protocol.game.ServerboundPlayerActionPacket;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.server.level.ServerPlayerGameMode;
-import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResult;
 import net.minecraft.world.InteractionResultHolder;
 import net.minecraft.world.entity.Entity;
-import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.ai.attributes.Attribute;
 import net.minecraft.world.entity.ai.attributes.AttributeModifier;
@@ -55,8 +55,8 @@ import net.minecraft.world.item.context.UseOnContext;
 import net.minecraft.world.level.ClipContext;
 import net.minecraft.world.level.GameType;
 import net.minecraft.world.level.Level;
+import net.minecraft.world.level.ServerLevelAccessor;
 import net.minecraft.world.level.block.BaseFireBlock;
-import net.minecraft.world.level.block.BeehiveBlock;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.DoublePlantBlock;
@@ -68,24 +68,33 @@ import net.minecraft.world.level.material.Fluids;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.BlockHitResult;
 import net.minecraft.world.phys.Vec3;
-import net.minecraftforge.common.ForgeHooks;
-import net.minecraftforge.common.ToolActions;
-import net.minecraftforge.common.extensions.IForgeBaseRailBlock;
-import net.minecraftforge.event.entity.player.PlayerInteractEvent.LeftClickBlock;
-import net.minecraftforge.event.entity.player.PlayerInteractEvent.RightClickBlock;
-import net.minecraftforge.eventbus.api.Event;
+
+import net.neoforged.neoforge.common.CommonHooks;
+import net.neoforged.neoforge.common.extensions.IBaseRailBlockExtension;
+import net.neoforged.neoforge.common.util.TriState;
+import net.neoforged.neoforge.event.EventHooks;
+import net.neoforged.neoforge.event.entity.player.PlayerInteractEvent.LeftClickBlock;
+import net.neoforged.neoforge.event.entity.player.PlayerInteractEvent.RightClickBlock;
 
 public class DeployerHandler {
+	private static final Map<BlockPos, List<ItemEntity>> CAPTURED_BLOCK_DROPS = new HashMap<>();
+	public static final Map<BlockPos, List<ItemEntity>> CAPTURED_BLOCK_DROPS_VIEW = Collections.unmodifiableMap(CAPTURED_BLOCK_DROPS);
 
-	private static final class ItemUseWorld extends WrappedLevel {
+	private static final class ItemUseWorld extends WrappedLevel implements ServerLevelAccessor {
 		private final Direction face;
 		private final BlockPos pos;
 		boolean rayMode = false;
 
-		private ItemUseWorld(Level world, Direction face, BlockPos pos) {
-			super(world);
+		private ItemUseWorld(ServerLevel level, Direction face, BlockPos pos) {
+			super(level);
 			this.face = face;
 			this.pos = pos;
+		}
+
+		@Override
+		public ServerLevel getLevel() {
+			// This is safe, we always pass ServerLevel in the constructor
+			return (ServerLevel) level;
 		}
 
 		@Override
@@ -114,7 +123,7 @@ public class DeployerHandler {
 				return false;
 
 		if (held.getItem() instanceof BucketItem bucketItem) {
-			Fluid fluid = bucketItem.getFluid();
+			Fluid fluid = bucketItem.content;
 			if (fluid != Fluids.EMPTY && world.getFluidState(targetPos)
 				.getType() == fluid)
 				return false;
@@ -128,8 +137,12 @@ public class DeployerHandler {
 	}
 
 	static void activate(DeployerFakePlayer player, Vec3 vec, BlockPos clickedPos, Vec3 extensionVector, Mode mode) {
-		Multimap<Attribute, AttributeModifier> attributeModifiers = player.getMainHandItem()
-			.getAttributeModifiers(EquipmentSlot.MAINHAND);
+		HashMultimap<Holder<Attribute>, AttributeModifier> attributeModifiers = HashMultimap.create();
+		player.getMainHandItem()
+			.getAttributeModifiers()
+			.modifiers()
+			.forEach(e -> attributeModifiers.put(e.attribute(), e.modifier()));
+
 		player.getAttributes()
 			.addTransientAttributeModifiers(attributeModifiers);
 		activateInner(player, vec, clickedPos, extensionVector, mode);
@@ -139,7 +152,6 @@ public class DeployerHandler {
 
 	private static void activateInner(DeployerFakePlayer player, Vec3 vec, BlockPos clickedPos, Vec3 extensionVector,
 									  Mode mode) {
-
 		Vec3 rayOrigin = vec.add(extensionVector.scale(3 / 2f + 1 / 64f));
 		Vec3 rayTarget = vec.add(extensionVector.scale(5 / 2f - 1 / 64f));
 		player.setPos(rayOrigin.x, rayOrigin.y, rayOrigin.z);
@@ -148,21 +160,21 @@ public class DeployerHandler {
 		Item item = stack.getItem();
 
 		// Check for entities
-		final Level world = player.level();
-		List<Entity> entities = world.getEntitiesOfClass(Entity.class, new AABB(clickedPos))
+		final ServerLevel level = player.serverLevel();
+		List<Entity> entities = level.getEntitiesOfClass(Entity.class, new AABB(clickedPos))
 			.stream()
 			.filter(e -> !(e instanceof AbstractContraptionEntity))
-			.collect(Collectors.toList());
+			.toList();
 		InteractionHand hand = InteractionHand.MAIN_HAND;
 		if (!entities.isEmpty()) {
-			Entity entity = entities.get(world.random.nextInt(entities.size()));
+			Entity entity = entities.get(level.random.nextInt(entities.size()));
 			List<ItemEntity> capturedDrops = new ArrayList<>();
 			boolean success = false;
 			entity.captureDrops(capturedDrops);
 
 			// Use on entity
 			if (mode == Mode.USE) {
-				InteractionResult cancelResult = ForgeHooks.onInteractEntity(player, entity, hand);
+				InteractionResult cancelResult = CommonHooks.onInteractEntity(player, entity, hand);
 				if (cancelResult == InteractionResult.FAIL) {
 					entity.captureDrops(null);
 					return;
@@ -181,18 +193,18 @@ public class DeployerHandler {
 						success = true;
 				}
 				if (!success && entity instanceof Player playerEntity) {
-					if (stack.isEdible()) {
+					if (stack.has(DataComponents.FOOD)) {
 						FoodProperties foodProperties = item.getFoodProperties(stack, player);
-						if (playerEntity.canEat(foodProperties.canAlwaysEat())) {
+						if (foodProperties != null && playerEntity.canEat(foodProperties.canAlwaysEat())) {
 							ItemStack copy = stack.copy();
-							player.setItemInHand(hand, stack.finishUsingItem(world, playerEntity));
+							player.setItemInHand(hand, stack.finishUsingItem(level, playerEntity));
 							player.spawnedItemEffects = copy;
 							success = true;
 						}
 					}
 					if (AllItemTags.DEPLOYABLE_DRINK.matches(stack)) {
 						player.spawnedItemEffects = stack.copy();
-						player.setItemInHand(hand, stack.finishUsingItem(world, playerEntity));
+						player.setItemInHand(hand, stack.finishUsingItem(level, playerEntity));
 						success = true;
 					}
 				}
@@ -215,10 +227,10 @@ public class DeployerHandler {
 		// Shoot ray
 		ClipContext rayTraceContext =
 			new ClipContext(rayOrigin, rayTarget, ClipContext.Block.OUTLINE, ClipContext.Fluid.NONE, player);
-		BlockHitResult result = world.clip(rayTraceContext);
+		BlockHitResult result = level.clip(rayTraceContext);
 		if (result.getBlockPos() != clickedPos)
 			result = new BlockHitResult(result.getLocation(), result.getDirection(), clickedPos, result.isInside());
-		BlockState clickedState = world.getBlockState(clickedPos);
+		BlockState clickedState = level.getBlockState(clickedPos);
 		Direction face = result.getDirection();
 		if (face == null)
 			face = Direction.getNearest(extensionVector.x, extensionVector.y, extensionVector.z)
@@ -226,35 +238,35 @@ public class DeployerHandler {
 
 		// Left click
 		if (mode == Mode.PUNCH) {
-			if (!world.mayInteract(player, clickedPos))
+			if (!level.mayInteract(player, clickedPos))
 				return;
-			if (clickedState.getShape(world, clickedPos)
+			if (clickedState.getShape(level, clickedPos)
 				.isEmpty()) {
 				player.blockBreakingProgress = null;
 				return;
 			}
-			LeftClickBlock event = ForgeHooks.onLeftClickBlock(player, clickedPos, face);
+			LeftClickBlock event = CommonHooks.onLeftClickBlock(player, clickedPos, face, ServerboundPlayerActionPacket.Action.START_DESTROY_BLOCK);
 			if (event.isCanceled())
 				return;
-			if (BlockHelper.extinguishFire(world, player, clickedPos, face))
+			if (BlockHelper.extinguishFire(level, player, clickedPos, face))
 				return;
-			if (event.getUseBlock() != DENY)
-				clickedState.attack(world, clickedPos, player);
+			if (event.getUseBlock() != TriState.FALSE)
+				clickedState.attack(level, clickedPos, player);
 			if (stack.isEmpty())
 				return;
 
-			float progress = clickedState.getDestroyProgress(player, world, clickedPos) * 16;
+			float progress = clickedState.getDestroyProgress(player, level, clickedPos) * 16;
 			float before = 0;
 			Pair<BlockPos, Float> blockBreakingProgress = player.blockBreakingProgress;
 			if (blockBreakingProgress != null)
 				before = blockBreakingProgress.getValue();
 			progress += before;
-			world.playSound(null, clickedPos, clickedState.getSoundType()
+			level.playSound(null, clickedPos, clickedState.getSoundType()
 				.getHitSound(), SoundSource.NEUTRAL, .25f, 1);
 
 			if (progress >= 1) {
 				tryHarvestBlock(player, player.gameMode, clickedPos);
-				world.destroyBlockProgress(player.getId(), clickedPos, -1);
+				level.destroyBlockProgress(player.getId(), clickedPos, -1);
 				player.blockBreakingProgress = null;
 				return;
 			}
@@ -264,24 +276,24 @@ public class DeployerHandler {
 			}
 
 			if ((int) (before * 10) != (int) (progress * 10))
-				world.destroyBlockProgress(player.getId(), clickedPos, (int) (progress * 10));
+				level.destroyBlockProgress(player.getId(), clickedPos, (int) (progress * 10));
 			player.blockBreakingProgress = Pair.of(clickedPos, progress);
 			return;
 		}
 
 		// Right click
 		UseOnContext itemusecontext = new UseOnContext(player, hand, result);
-		Event.Result useBlock = DEFAULT;
-		Event.Result useItem = DEFAULT;
-		if (!clickedState.getShape(world, clickedPos)
+		TriState useBlock = TriState.DEFAULT;
+		TriState useItem = TriState.DEFAULT;
+		if (!clickedState.getShape(level, clickedPos)
 			.isEmpty()) {
-			RightClickBlock event = ForgeHooks.onRightClickBlock(player, hand, clickedPos, result);
+			RightClickBlock event = CommonHooks.onRightClickBlock(player, hand, clickedPos, result);
 			useBlock = event.getUseBlock();
 			useItem = event.getUseItem();
 		}
 
 		// Item has custom active use
-		if (useItem != DENY) {
+		if (useItem != TriState.FALSE) {
 			InteractionResult actionresult = stack.onItemUseFirst(itemusecontext);
 			if (actionresult != InteractionResult.PASS)
 				return;
@@ -290,15 +302,15 @@ public class DeployerHandler {
 		boolean holdingSomething = !player.getMainHandItem()
 			.isEmpty();
 		boolean flag1 =
-			!(player.isShiftKeyDown() && holdingSomething) || (stack.doesSneakBypassUse(world, clickedPos, player));
+			!(player.isShiftKeyDown() && holdingSomething) || (stack.doesSneakBypassUse(level, clickedPos, player));
 
 		// Use on block
-		if (useBlock != DENY && flag1
-			&& safeOnUse(clickedState, world, clickedPos, player, hand, result).consumesAction())
+		if (useBlock != TriState.FALSE && flag1
+			&& safeOnUse(clickedState, level, clickedPos, player, hand, result).consumesAction())
 			return;
 		if (stack.isEmpty())
 			return;
-		if (useItem == DENY)
+		if (useItem == TriState.FALSE)
 			return;
 		if (item instanceof CartAssemblerBlockItem
 			&& clickedState.canBeReplaced(new BlockPlaceContext(itemusecontext)))
@@ -308,7 +320,7 @@ public class DeployerHandler {
 		if (item == Items.FLINT_AND_STEEL) {
 			Direction newFace = result.getDirection();
 			BlockPos newPos = result.getBlockPos();
-			if (!BaseFireBlock.canBePlacedAt(world, clickedPos, newFace))
+			if (!BaseFireBlock.canBePlacedAt(level, clickedPos, newFace))
 				newFace = Direction.UP;
 			if (clickedState.isAir())
 				newPos = newPos.relative(face.getOpposite());
@@ -319,8 +331,8 @@ public class DeployerHandler {
 		// 'Inert' item use behaviour & block placement
 		InteractionResult onItemUse = stack.useOn(itemusecontext);
 		if (onItemUse.consumesAction()) {
-			if (stack.getItem() instanceof BlockItem bi
-				&& (bi.getBlock() instanceof IForgeBaseRailBlock || bi.getBlock() instanceof ITrackBlock))
+			if (item instanceof BlockItem bi
+				&& (bi.getBlock() instanceof IBaseRailBlockExtension || bi.getBlock() instanceof ITrackBlock))
 				player.placedTracks = true;
 			return;
 		}
@@ -331,30 +343,29 @@ public class DeployerHandler {
 			return;
 
 		// buckets create their own ray, We use a fake wall to contain the active area
-		Level itemUseWorld = world;
+		Level itemUseWorld = level;
 		if (item instanceof BucketItem || item instanceof SandPaperItem)
-			itemUseWorld = new ItemUseWorld(world, face, pos);
+			itemUseWorld = new ItemUseWorld(level, face, pos);
 
 		InteractionResultHolder<ItemStack> onItemRightClick = item.use(itemUseWorld, player, hand);
 
 		if (onItemRightClick.getResult().consumesAction() && item instanceof MobBucketItem bucketItem)
-			bucketItem.checkExtraContent(player, world, stack, clickedPos);
+			bucketItem.checkExtraContent(player, level, stack, clickedPos);
 
 		ItemStack resultStack = onItemRightClick.getObject();
-		if (resultStack != stack || resultStack.getCount() != stack.getCount() || resultStack.getUseDuration() > 0
+		if (resultStack != stack || resultStack.getCount() != stack.getCount() || resultStack.getUseDuration(player) > 0
 			|| resultStack.getDamageValue() != stack.getDamageValue()) {
 			player.setItemInHand(hand, onItemRightClick.getObject());
 		}
 
-		CompoundTag tag = stack.getTag();
-		if (tag != null && stack.getItem() instanceof SandPaperItem && tag.contains("Polishing")) {
-			player.spawnedItemEffects = ItemStack.of(tag.getCompound("Polishing"));
-			AllSoundEvents.SANDING_SHORT.playOnServer(world, pos, .25f, 1f);
+		if (stack.getItem() instanceof SandPaperItem && stack.has(AllDataComponents.SAND_PAPER_POLISHING)) {
+			player.spawnedItemEffects = stack.get(AllDataComponents.SAND_PAPER_POLISHING).item();
+			AllSoundEvents.SANDING_SHORT.playOnServer(level, pos, .25f, 1f);
 		}
 
 		if (!player.getUseItem()
 			.isEmpty())
-			player.setItemInHand(hand, stack.finishUsingItem(world, player));
+			player.setItemInHand(hand, stack.finishUsingItem(level, player));
 
 		player.stopUsingItem();
 	}
@@ -366,13 +377,10 @@ public class DeployerHandler {
 		BlockState blockstate = world.getBlockState(pos);
 		GameType gameType = interactionManager.getGameModeForPlayer();
 
-		if (net.minecraftforge.common.ForgeHooks.onBlockBreakEvent(world, gameType, player, pos) == -1)
+		if (CommonHooks.fireBlockBreak(world, gameType, player, pos, blockstate).isCanceled())
 			return false;
 
 		BlockEntity blockEntity = world.getBlockEntity(pos);
-		if (player.getMainHandItem()
-			.onBlockStartBreak(pos, player))
-			return false;
 		if (player.blockActionRestricted(world, pos, gameType))
 			return false;
 
@@ -382,7 +390,7 @@ public class DeployerHandler {
 		boolean canHarvest = blockstate.canHarvestBlock(world, pos, player);
 		prevHeldItem.mineBlock(world, blockstate, pos, player);
 		if (prevHeldItem.isEmpty() && !heldItem.isEmpty())
-			net.minecraftforge.event.ForgeEventFactory.onPlayerDestroyItem(player, heldItem, InteractionHand.MAIN_HAND);
+			EventHooks.onPlayerDestroyItem(player, heldItem, InteractionHand.MAIN_HAND);
 
 		BlockPos posUp = pos.above();
 		BlockState stateUp = world.getBlockState(posUp);
@@ -391,8 +399,8 @@ public class DeployerHandler {
 			&& stateUp.getBlock() == blockstate.getBlock()
 			&& stateUp.getValue(DoublePlantBlock.HALF) == DoubleBlockHalf.UPPER) {
 			// hack to prevent DoublePlantBlock from dropping a duplicate item
-			world.setBlock(pos, Blocks.AIR.defaultBlockState(), 35);
-			world.setBlock(posUp, Blocks.AIR.defaultBlockState(), 35);
+			world.setBlock(pos, Blocks.AIR.defaultBlockState(), Block.UPDATE_ALL | Block.UPDATE_SUPPRESS_DROPS);
+			world.setBlock(posUp, Blocks.AIR.defaultBlockState(), Block.UPDATE_ALL | Block.UPDATE_SUPPRESS_DROPS);
 		} else {
 			if (!blockstate.onDestroyedByPlayer(world, pos, player, canHarvest, world.getFluidState(pos)))
 				return true;
@@ -411,48 +419,16 @@ public class DeployerHandler {
 
 	public static InteractionResult safeOnUse(BlockState state, Level world, BlockPos pos, Player player,
 											  InteractionHand hand, BlockHitResult ray) {
-		if (state.getBlock() instanceof BeehiveBlock)
-			return safeOnBeehiveUse(state, world, pos, player, hand);
-		return state.use(world, player, hand, ray);
-	}
-
-	protected static InteractionResult safeOnBeehiveUse(BlockState state, Level world, BlockPos pos, Player player,
-														InteractionHand hand) {
-		// <> BeehiveBlock#onUse
-
-		BeehiveBlock block = (BeehiveBlock) state.getBlock();
-		ItemStack prevHeldItem = player.getItemInHand(hand);
-		int honeyLevel = state.getValue(BeehiveBlock.HONEY_LEVEL);
-		boolean success = false;
-		if (honeyLevel < 5)
-			return InteractionResult.PASS;
-
-		if (prevHeldItem.canPerformAction(ToolActions.SHEARS_HARVEST)) {
-			world.playSound(player, player.getX(), player.getY(), player.getZ(), SoundEvents.BEEHIVE_SHEAR,
-				SoundSource.NEUTRAL, 1.0F, 1.0F);
-			// <> BeehiveBlock#dropHoneycomb
-			player.getInventory().placeItemBackInInventory(new ItemStack(Items.HONEYCOMB, 3));
-			prevHeldItem.hurtAndBreak(1, player, s -> s.broadcastBreakEvent(hand));
-			success = true;
+		List<ItemEntity> drops = new ArrayList<>(4);
+		CAPTURED_BLOCK_DROPS.put(pos, drops);
+		try {
+			InteractionResult result = BlockHelper.invokeUse(state, world, player, hand, ray);
+			for (ItemEntity itemEntity : drops)
+				player.getInventory().placeItemBackInInventory(itemEntity.getItem());
+			return result;
+		} finally {
+			CAPTURED_BLOCK_DROPS.remove(pos);
 		}
-
-		if (prevHeldItem.getItem() == Items.GLASS_BOTTLE) {
-			prevHeldItem.shrink(1);
-			world.playSound(player, player.getX(), player.getY(), player.getZ(), SoundEvents.BOTTLE_FILL,
-				SoundSource.NEUTRAL, 1.0F, 1.0F);
-			ItemStack honeyBottle = new ItemStack(Items.HONEY_BOTTLE);
-			if (prevHeldItem.isEmpty())
-				player.setItemInHand(hand, honeyBottle);
-			else
-				player.getInventory().placeItemBackInInventory(honeyBottle);
-			success = true;
-		}
-
-		if (!success)
-			return InteractionResult.PASS;
-
-		block.resetHoneyLevel(world, state, pos);
-		return InteractionResult.SUCCESS;
 	}
 
 }
