@@ -7,35 +7,35 @@ import java.util.stream.Collectors;
 
 import javax.annotation.ParametersAreNonnullByDefault;
 
-import org.slf4j.Logger;
-
-import com.google.gson.JsonObject;
-import com.simibubi.create.Create;
-import com.simibubi.create.content.processing.recipe.ProcessingRecipeBuilder.ProcessingRecipeParams;
-import com.simibubi.create.foundation.fluid.FluidIngredient;
+import com.google.common.base.Joiner;
+import com.mojang.serialization.DataResult;
+import com.mojang.serialization.MapCodec;
 import com.simibubi.create.foundation.recipe.IRecipeTypeInfo;
 
 import net.minecraft.MethodsReturnNonnullByDefault;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
-import net.minecraft.core.RegistryAccess;
-import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.Container;
+import net.minecraft.network.RegistryFriendlyByteBuf;
+import net.minecraft.network.codec.StreamCodec;
+import net.minecraft.util.RandomSource;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.Recipe;
+import net.minecraft.world.item.crafting.RecipeInput;
 import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.item.crafting.RecipeType;
-import net.minecraftforge.fluids.FluidStack;
+
+import net.neoforged.neoforge.fluids.FluidStack;
+import net.neoforged.neoforge.fluids.crafting.SizedFluidIngredient;
 
 @MethodsReturnNonnullByDefault
 @ParametersAreNonnullByDefault
-public abstract class ProcessingRecipe<T extends Container> implements Recipe<T> {
+public abstract class ProcessingRecipe<I extends RecipeInput, P extends ProcessingRecipeParams> implements Recipe<I> {
 
-	protected ResourceLocation id;
+	protected P params;
 	protected NonNullList<Ingredient> ingredients;
 	protected NonNullList<ProcessingOutput> results;
-	protected NonNullList<FluidIngredient> fluidIngredients;
+	protected NonNullList<SizedFluidIngredient> fluidIngredients;
 	protected NonNullList<FluidStack> fluidResults;
 	protected int processingDuration;
 	protected HeatCondition requiredHeat;
@@ -45,20 +45,18 @@ public abstract class ProcessingRecipe<T extends Container> implements Recipe<T>
 	private IRecipeTypeInfo typeInfo;
 	private Supplier<ItemStack> forcedResult;
 
-	public ProcessingRecipe(IRecipeTypeInfo typeInfo, ProcessingRecipeParams params) {
-		this.forcedResult = null;
-		this.typeInfo = typeInfo;
-		this.processingDuration = params.processingDuration;
-		this.fluidIngredients = params.fluidIngredients;
-		this.fluidResults = params.fluidResults;
-		this.serializer = typeInfo.getSerializer();
-		this.requiredHeat = params.requiredHeat;
+	public ProcessingRecipe(IRecipeTypeInfo typeInfo, P params) {
+		this.params = params;
 		this.ingredients = params.ingredients;
-		this.type = typeInfo.getType();
+		this.fluidIngredients = params.fluidIngredients;
 		this.results = params.results;
-		this.id = params.id;
-
-		validate(typeInfo.getId());
+		this.fluidResults = params.fluidResults;
+		this.processingDuration = params.processingDuration;
+		this.requiredHeat = params.requiredHeat;
+		this.type = typeInfo.getType();
+		this.serializer = typeInfo.getSerializer();
+		this.typeInfo = typeInfo;
+		this.forcedResult = null;
 	}
 
 	// Recipe type options:
@@ -83,39 +81,41 @@ public abstract class ProcessingRecipe<T extends Container> implements Recipe<T>
 		return 0;
 	}
 
-	//
-
-	private void validate(ResourceLocation recipeTypeId) {
-		String messageHeader = "Your custom " + recipeTypeId + " recipe (" + id.toString() + ")";
-		Logger logger = Create.LOGGER;
+	public List<String> validate() {
+		List<String> errors = new ArrayList<>();
 		int ingredientCount = ingredients.size();
 		int outputCount = results.size();
 
 		if (ingredientCount > getMaxInputCount())
-			logger.warn(messageHeader + " has more item inputs (" + ingredientCount + ") than supported ("
+			errors.add("Recipe has more item inputs (" + ingredientCount + ") than supported ("
 				+ getMaxInputCount() + ").");
 
 		if (outputCount > getMaxOutputCount())
-			logger.warn(messageHeader + " has more item outputs (" + outputCount + ") than supported ("
+			errors.add("Recipe has more item outputs (" + outputCount + ") than supported ("
 				+ getMaxOutputCount() + ").");
-
-		if (processingDuration > 0 && !canSpecifyDuration())
-			logger.warn(messageHeader + " specified a duration. Durations have no impact on this type of recipe.");
-
-		if (requiredHeat != HeatCondition.NONE && !canRequireHeat())
-			logger.warn(
-				messageHeader + " specified a heat condition. Heat conditions have no impact on this type of recipe.");
 
 		ingredientCount = fluidIngredients.size();
 		outputCount = fluidResults.size();
 
 		if (ingredientCount > getMaxFluidInputCount())
-			logger.warn(messageHeader + " has more fluid inputs (" + ingredientCount + ") than supported ("
-				+ getMaxFluidInputCount() + ").");
+			errors.add("Recipe has more fluid inputs (" + ingredientCount + ") than supported ("
+						+ getMaxFluidInputCount() + ").");
 
 		if (outputCount > getMaxFluidOutputCount())
-			logger.warn(messageHeader + " has more fluid outputs (" + outputCount + ") than supported ("
-				+ getMaxFluidOutputCount() + ").");
+			errors.add("Recipe has more fluid outputs (" + outputCount + ") than supported ("
+						+ getMaxFluidOutputCount() + ").");
+
+		if (processingDuration > 0 && !canSpecifyDuration())
+			errors.add("Recipe specified a duration. Durations have no impact on this type of recipe.");
+
+		if (requiredHeat != HeatCondition.NONE && !canRequireHeat())
+			errors.add("Recipe specified a heat condition. Heat conditions have no impact on this type of recipe.");
+
+		return errors;
+	}
+
+	public P getParams() {
+		return params;
 	}
 
 	@Override
@@ -123,7 +123,7 @@ public abstract class ProcessingRecipe<T extends Container> implements Recipe<T>
 		return ingredients;
 	}
 
-	public NonNullList<FluidIngredient> getFluidIngredients() {
+	public NonNullList<SizedFluidIngredient> getFluidIngredients() {
 		return fluidIngredients;
 	}
 
@@ -145,15 +145,15 @@ public abstract class ProcessingRecipe<T extends Container> implements Recipe<T>
 		forcedResult = stack;
 	}
 
-	public List<ItemStack> rollResults() {
-		return rollResults(this.getRollableResults());
+	public List<ItemStack> rollResults(RandomSource randomSource) {
+		return rollResults(this.getRollableResults(), randomSource);
 	}
 
-	public List<ItemStack> rollResults(List<ProcessingOutput> rollableResults) {
+	public List<ItemStack> rollResults(List<ProcessingOutput> rollableResults, RandomSource randomSource) {
 		List<ItemStack> results = new ArrayList<>();
 		for (int i = 0; i < rollableResults.size(); i++) {
 			ProcessingOutput output = rollableResults.get(i);
-			ItemStack stack = i == 0 && forcedResult != null ? forcedResult.get() : output.rollOutput();
+			ItemStack stack = i == 0 && forcedResult != null ? forcedResult.get() : output.rollOutput(randomSource);
 			if (!stack.isEmpty())
 				results.add(stack);
 		}
@@ -171,8 +171,8 @@ public abstract class ProcessingRecipe<T extends Container> implements Recipe<T>
 	// IRecipe<> paperwork
 
 	@Override
-	public ItemStack assemble(T inv, RegistryAccess registryAccess) {
-		return getResultItem(registryAccess);
+	public ItemStack assemble(I t, HolderLookup.Provider provider) {
+		return getResultItem(provider);
 	}
 
 	@Override
@@ -181,9 +181,9 @@ public abstract class ProcessingRecipe<T extends Container> implements Recipe<T>
 	}
 
 	@Override
-	public ItemStack getResultItem(RegistryAccess registryAccess) {
+	public ItemStack getResultItem(HolderLookup.Provider provider) {
 		return getRollableResults().isEmpty() ? ItemStack.EMPTY
-			: getRollableResults().get(0)
+				: getRollableResults().getFirst()
 				.getStack();
 	}
 
@@ -196,11 +196,6 @@ public abstract class ProcessingRecipe<T extends Container> implements Recipe<T>
 	@Override
 	public String getGroup() {
 		return "processing";
-	}
-
-	@Override
-	public ResourceLocation getId() {
-		return id;
 	}
 
 	@Override
@@ -217,14 +212,27 @@ public abstract class ProcessingRecipe<T extends Container> implements Recipe<T>
 		return typeInfo;
 	}
 
-	// Additional Data added by subtypes
+	public static <P extends ProcessingRecipeParams, R extends ProcessingRecipe<?, P>> MapCodec<R> codec(
+		Factory<P, R> factory, MapCodec<P> paramsCodec
+	) {
+		return paramsCodec.xmap(factory::create, recipe -> recipe.getParams())
+			.validate(recipe -> {
+				var errors = recipe.validate();
+				if (errors.isEmpty())
+					return DataResult.success(recipe);
+				errors.add(recipe.getClass().getSimpleName() + " failed validation:");
+				return DataResult.error(() -> Joiner.on('\n').join(errors), recipe);
+			});
+	}
 
-	public void readAdditional(JsonObject json) {}
+	public static <P extends ProcessingRecipeParams, R extends ProcessingRecipe<?, P>> StreamCodec<RegistryFriendlyByteBuf, R> streamCodec(
+		Factory<P, R> factory, StreamCodec<RegistryFriendlyByteBuf, P> streamCodec
+	) {
+		return streamCodec.map(factory::create, ProcessingRecipe::getParams);
+	}
 
-	public void readAdditional(FriendlyByteBuf buffer) {}
-
-	public void writeAdditional(JsonObject json) {}
-
-	public void writeAdditional(FriendlyByteBuf buffer) {}
-
+	@FunctionalInterface
+	public interface Factory<P extends ProcessingRecipeParams, R extends ProcessingRecipe<?, P>> {
+		R create(P params);
+	}
 }
