@@ -1,46 +1,44 @@
 package com.simibubi.create.content.processing.sequenced;
 
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
 
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
+import com.simibubi.create.AllDataComponents;
 import com.simibubi.create.AllRecipeTypes;
-import com.simibubi.create.Create;
 import com.simibubi.create.content.processing.recipe.ProcessingOutput;
 import com.simibubi.create.content.processing.recipe.ProcessingRecipe;
-import com.simibubi.create.foundation.fluid.FluidIngredient;
 import com.simibubi.create.foundation.utility.CreateLang;
 
-import net.createmod.catnip.data.Pair;
+import io.netty.buffer.ByteBuf;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
-import net.minecraft.core.RegistryAccess;
-import net.minecraft.nbt.CompoundTag;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.codec.ByteBufCodecs;
+import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.Container;
+import net.minecraft.util.RandomSource;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.Recipe;
+import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.RecipeInput;
 import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.item.crafting.RecipeType;
-import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.Level;
 
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.api.distmarker.OnlyIn;
-import net.minecraftforge.event.entity.player.ItemTooltipEvent;
-import net.minecraftforge.items.ItemHandlerHelper;
-import net.minecraftforge.items.wrapper.RecipeWrapper;
+import net.neoforged.api.distmarker.Dist;
+import net.neoforged.api.distmarker.OnlyIn;
+import net.neoforged.neoforge.event.entity.player.ItemTooltipEvent;
+import net.neoforged.neoforge.items.wrapper.RecipeWrapper;
 
 public class SequencedAssemblyRecipe implements Recipe<RecipeWrapper> {
-
-	protected ResourceLocation id;
 	protected SequencedAssemblyRecipeSerializer serializer;
 
 	protected Ingredient ingredient;
@@ -50,73 +48,74 @@ public class SequencedAssemblyRecipe implements Recipe<RecipeWrapper> {
 
 	public final List<ProcessingOutput> resultPool;
 
-	public SequencedAssemblyRecipe(ResourceLocation recipeId, SequencedAssemblyRecipeSerializer serializer) {
-		this.id = recipeId;
+	public SequencedAssemblyRecipe(SequencedAssemblyRecipeSerializer serializer) {
 		this.serializer = serializer;
 		sequence = new ArrayList<>();
 		resultPool = new ArrayList<>();
 		loops = 5;
 	}
 
-	public static <C extends Container, R extends ProcessingRecipe<C>> Optional<R> getRecipe(Level world, C inv,
-																							 RecipeType<R> type, Class<R> recipeClass) {
-		return getRecipe(world, inv, type, recipeClass, r -> r.matches(inv, world));
+	public static <I extends RecipeInput, R extends ProcessingRecipe<I, ?>> Optional<RecipeHolder<R>> getRecipe(Level world, I inv,
+																												RecipeType<R> type, Class<R> recipeClass) {
+		return getRecipe(world, inv, type, recipeClass, r -> r.value().matches(inv, world));
 	}
 
-	public static <C extends Container, R extends ProcessingRecipe<C>> Optional<R> getRecipe(Level world, C inv,
-																							 RecipeType<R> type, Class<R> recipeClass, Predicate<? super R> recipeFilter) {
+	public static <I extends RecipeInput, R extends ProcessingRecipe<I, ?>> Optional<RecipeHolder<R>> getRecipe(Level world, I inv,
+																												RecipeType<R> type, Class<R> recipeClass, Predicate<? super RecipeHolder<R>> recipeFilter) {
 		return getRecipes(world, inv.getItem(0), type, recipeClass).filter(recipeFilter)
 			.findFirst();
 	}
 
-	public static <R extends ProcessingRecipe<?>> Optional<R> getRecipe(Level world, ItemStack item,
-																		RecipeType<R> type, Class<R> recipeClass) {
-		List<SequencedAssemblyRecipe> all = world.getRecipeManager()
-			.<RecipeWrapper, SequencedAssemblyRecipe>getAllRecipesFor(AllRecipeTypes.SEQUENCED_ASSEMBLY.getType());
-		for (SequencedAssemblyRecipe sequencedAssemblyRecipe : all) {
-			if (!sequencedAssemblyRecipe.appliesTo(item))
+	public static <R extends ProcessingRecipe<?, ?>> Optional<RecipeHolder<R>> getRecipe(Level level, ItemStack item,
+																						 RecipeType<R> type, Class<R> recipeClass) {
+		List<RecipeHolder<SequencedAssemblyRecipe>> all = level.getRecipeManager()
+			.getAllRecipesFor(AllRecipeTypes.SEQUENCED_ASSEMBLY.getType());
+		for (RecipeHolder<SequencedAssemblyRecipe> sequencedAssemblyRecipe : all) {
+			if (!sequencedAssemblyRecipe.value().appliesTo(sequencedAssemblyRecipe.id(), item))
 				continue;
-			SequencedRecipe<?> nextRecipe = sequencedAssemblyRecipe.getNextRecipe(item);
-			ProcessingRecipe<?> recipe = nextRecipe.getRecipe();
+			SequencedRecipe<?> nextRecipe = sequencedAssemblyRecipe.value().getNextRecipe(item);
+			ProcessingRecipe<?, ?> recipe = nextRecipe.getRecipe();
 			if (recipe.getType() != type || !recipeClass.isInstance(recipe))
 				continue;
-			recipe.enforceNextResult(() -> sequencedAssemblyRecipe.advance(item));
-			return Optional.of(recipeClass.cast(recipe));
+			recipe.enforceNextResult(() -> sequencedAssemblyRecipe.value().advance(sequencedAssemblyRecipe.id(), item, level.random));
+			return Optional.of(new RecipeHolder<>(sequencedAssemblyRecipe.id(), recipeClass.cast(recipe)));
 		}
 		return Optional.empty();
 	}
 
-	public static <R extends ProcessingRecipe<?>> Stream<R> getRecipes(Level world, ItemStack item,
-																	   RecipeType<R> type, Class<R> recipeClass) {
-		List<SequencedAssemblyRecipe> all = world.getRecipeManager()
-			.<RecipeWrapper, SequencedAssemblyRecipe>getAllRecipesFor(AllRecipeTypes.SEQUENCED_ASSEMBLY.getType());
+	public static <R extends ProcessingRecipe<?, ?>> Stream<RecipeHolder<R>> getRecipes(Level level, ItemStack item, RecipeType<R> type, Class<R> recipeClass) {
+		List<RecipeHolder<SequencedAssemblyRecipe>> all = level.getRecipeManager()
+			.getAllRecipesFor(AllRecipeTypes.SEQUENCED_ASSEMBLY.getType());
 
-		return all.stream()
-			.filter(it -> it.appliesTo(item))
-			.map(it -> Pair.of(it, it.getNextRecipe(item).getRecipe()))
-			.filter(it -> it.getSecond()
-				.getType() == type && recipeClass.isInstance(it.getSecond()))
-			.map(it -> {
-				it.getSecond()
-					.enforceNextResult(() -> it.getFirst().advance(item));
-				return it.getSecond();
-			})
-			.map(recipeClass::cast);
+		List<RecipeHolder<R>> result = new ArrayList<>();
+
+		for (RecipeHolder<SequencedAssemblyRecipe> holder : all) {
+			if (holder.value().appliesTo(holder.id(), item)) {
+				ProcessingRecipe<?, ?> recipe = holder.value().getNextRecipe(item).getRecipe();
+
+				if (recipe.getType() == type && recipeClass.isInstance(recipe)) {
+					recipe.enforceNextResult(() -> holder.value().advance(holder.id(), item, level.random));
+					R castedRecipe = recipeClass.cast(recipe);
+					result.add(new RecipeHolder<>(holder.id(), castedRecipe));
+				}
+			}
+		}
+
+		return result.stream();
 	}
 
-	private ItemStack advance(ItemStack input) {
+	private ItemStack advance(ResourceLocation id, ItemStack input, RandomSource random) {
 		int step = getStep(input);
 		if ((step + 1) / sequence.size() >= loops)
-			return rollResult();
+			return rollResult(random);
 
-		ItemStack advancedItem = ItemHandlerHelper.copyStackWithSize(getTransitionalItem(), 1);
-		CompoundTag itemTag = advancedItem.getOrCreateTag();
-		CompoundTag tag = new CompoundTag();
-		tag.putString("id", id.toString());
-		tag.putInt("Step", step + 1);
-		tag.putFloat("Progress", (step + 1f) / (sequence.size() * loops));
-		itemTag.put("SequencedAssembly", tag);
-		advancedItem.setTag(itemTag);
+		ItemStack advancedItem = getTransitionalItem().copyWithCount(1);
+		SequencedAssembly sequencedAssembly = new SequencedAssembly(
+			id,
+			step + 1,
+			(step + 1f) / (sequence.size() * loops)
+		);
+		advancedItem.set(AllDataComponents.SEQUENCED_ASSEMBLY, sequencedAssembly);
 		return advancedItem;
 	}
 
@@ -124,27 +123,11 @@ public class SequencedAssemblyRecipe implements Recipe<RecipeWrapper> {
 		return loops;
 	}
 
-	public void addAdditionalIngredientsAndMachines(List<Ingredient> list) {
-		sequence.forEach(sr -> sr.getAsAssemblyRecipe()
-			.addAssemblyIngredients(list));
-		Set<ItemLike> machines = new HashSet<>();
-		sequence.forEach(sr -> sr.getAsAssemblyRecipe()
-			.addRequiredMachines(machines));
-		machines.stream()
-			.map(Ingredient::of)
-			.forEach(list::add);
-	}
-
-	public void addAdditionalFluidIngredients(List<FluidIngredient> list) {
-		sequence.forEach(sr -> sr.getAsAssemblyRecipe()
-			.addAssemblyFluidIngredients(list));
-	}
-
-	private ItemStack rollResult() {
+	private ItemStack rollResult(RandomSource random) {
 		float totalWeight = 0;
 		for (ProcessingOutput entry : resultPool)
 			totalWeight += entry.getChance();
-		float number = Create.RANDOM.nextFloat() * totalWeight;
+		float number = random.nextFloat() * totalWeight;
 		for (ProcessingOutput entry : resultPool) {
 			number -= entry.getChance();
 			if (number < 0)
@@ -154,14 +137,16 @@ public class SequencedAssemblyRecipe implements Recipe<RecipeWrapper> {
 		return ItemStack.EMPTY;
 	}
 
-	private boolean appliesTo(ItemStack input) {
-		if (ingredient.test(input))
-			return true;
-		return input.hasTag() && getTransitionalItem().getItem() == input.getItem() && input.getTag()
-			.contains("SequencedAssembly") && input.getTag()
-			.getCompound("SequencedAssembly")
-			.getString("id")
-			.equals(id.toString());
+	private boolean appliesTo(ResourceLocation id, ItemStack input) {
+		// First, check if the item is already in the middle of a sequenced assembly recipe
+		if (input.has(AllDataComponents.SEQUENCED_ASSEMBLY)) {
+			//noinspection DataFlowIssue
+			return getTransitionalItem().getItem() == input.getItem() && input
+				.get(AllDataComponents.SEQUENCED_ASSEMBLY)
+				.id().equals(id);
+		}
+		// Else it must be the first step in a new sequenced assembly recipe
+		return ingredient.test(input);
 	}
 
 	private SequencedRecipe<?> getNextRecipe(ItemStack input) {
@@ -169,48 +154,37 @@ public class SequencedAssemblyRecipe implements Recipe<RecipeWrapper> {
 	}
 
 	private int getStep(ItemStack input) {
-		if (!input.hasTag())
+		if (!input.has(AllDataComponents.SEQUENCED_ASSEMBLY))
 			return 0;
-		CompoundTag tag = input.getTag();
-		if (!tag.contains("SequencedAssembly"))
-			return 0;
-		int step = tag.getCompound("SequencedAssembly")
-			.getInt("Step");
-		return step;
+		//noinspection DataFlowIssue
+		return input.get(AllDataComponents.SEQUENCED_ASSEMBLY).step();
 	}
 
 	@Override
-	public boolean matches(RecipeWrapper inv, Level p_77569_2_) {
+	public boolean matches(RecipeWrapper inv, Level level) {
 		return false;
 	}
 
 	@Override
-	public ItemStack assemble(RecipeWrapper inv, RegistryAccess registryAccess) {
+	public ItemStack assemble(RecipeWrapper input, HolderLookup.Provider registries) {
 		return ItemStack.EMPTY;
 	}
 
 	@Override
-	public boolean canCraftInDimensions(int p_194133_1_, int p_194133_2_) {
+	public boolean canCraftInDimensions(int width, int height) {
 		return false;
 	}
 
 	@Override
-	public ItemStack getResultItem(RegistryAccess registryAccess) {
-		return resultPool.get(0)
-			.getStack();
+	public ItemStack getResultItem(HolderLookup.Provider registries) {
+		return resultPool.getFirst().getStack();
 	}
 
 	public float getOutputChance() {
 		float totalWeight = 0;
 		for (ProcessingOutput entry : resultPool)
 			totalWeight += entry.getChance();
-		return resultPool.get(0)
-			.getChance() / totalWeight;
-	}
-
-	@Override
-	public ResourceLocation getId() {
-		return id;
+		return resultPool.getFirst().getChance() / totalWeight;
 	}
 
 	@Override
@@ -231,17 +205,16 @@ public class SequencedAssemblyRecipe implements Recipe<RecipeWrapper> {
 	@OnlyIn(Dist.CLIENT)
 	public static void addToTooltip(ItemTooltipEvent event) {
 		ItemStack stack = event.getItemStack();
-		if (!stack.hasTag() || !stack.getTag()
-			.contains("SequencedAssembly"))
+		if (!stack.has(AllDataComponents.SEQUENCED_ASSEMBLY))
 			return;
-		CompoundTag compound = stack.getTag()
-			.getCompound("SequencedAssembly");
-		ResourceLocation resourceLocation = new ResourceLocation(compound.getString("id"));
-		Optional<? extends Recipe<?>> optionalRecipe = Minecraft.getInstance().level.getRecipeManager()
-			.byKey(resourceLocation);
-		if (!optionalRecipe.isPresent())
+		SequencedAssembly sequencedAssembly = stack.get(AllDataComponents.SEQUENCED_ASSEMBLY);
+		@SuppressWarnings({"RedundantCast", "DataFlowIssue"}) // The java compiler thinks `byKey` returns an Optional<RecipeHolder<?>>
+		Optional<RecipeHolder<? extends Recipe<?>>> optionalRecipe =
+			(Optional<RecipeHolder<?>>) Minecraft.getInstance().level.getRecipeManager()
+				.byKey(sequencedAssembly.id());
+		if (optionalRecipe.isEmpty())
 			return;
-		Recipe<?> recipe = optionalRecipe.get();
+		Recipe<?> recipe = optionalRecipe.get().value();
 		if (!(recipe instanceof SequencedAssemblyRecipe sequencedAssemblyRecipe))
 			return;
 
@@ -285,4 +258,18 @@ public class SequencedAssemblyRecipe implements Recipe<RecipeWrapper> {
 		return transitionalItem.getStack();
 	}
 
+	public record SequencedAssembly(ResourceLocation id, int step, float progress) {
+		public static final Codec<SequencedAssembly> CODEC = RecordCodecBuilder.create(i -> i.group(
+			ResourceLocation.CODEC.fieldOf("id").forGetter(SequencedAssembly::id),
+			Codec.INT.fieldOf("step").forGetter(SequencedAssembly::step),
+			Codec.FLOAT.fieldOf("progress").forGetter(SequencedAssembly::progress)
+		).apply(i, SequencedAssembly::new));
+
+		public static final StreamCodec<ByteBuf, SequencedAssembly> STREAM_CODEC = StreamCodec.composite(
+			ResourceLocation.STREAM_CODEC, SequencedAssembly::id,
+			ByteBufCodecs.INT, SequencedAssembly::step,
+			ByteBufCodecs.FLOAT, SequencedAssembly::progress,
+			SequencedAssembly::new
+		);
+	}
 }
